--- a/Task2/Task2/Views/Account/Login.cshtml
+++ b/Task2/Task2/Views/Account/Login.cshtml
@@ -1,10 +1,17 @@
 ﻿@model Task2.Models.ViewModels.LoginModel
-
+@if (TempData["messageDelete"] != null)
+{
+    <div class="alert alert-danger alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <strong>@TempData["messageDelete"]</strong>
+    </div>
+}
 @{
     ViewData["Title"] = "Выполнить вход";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Вход в приложение</h2>
+
 <form method="post" asp-controller="Account" asp-action="Login"
       asp-route-returnUrl="@Model.ReturnUrl">
     <div asp-validation-summary="ModelOnly"></div>
