--- a/Task2/Task2/Views/_ViewImports.cshtml
+++ b/Task2/Task2/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using Task2.Models.ViewModels
 @using Microsoft.AspNetCore.Identity
 
+@inject SignInManager<User> SignInManager
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
